--- a/shiohara-developer-guide.adoc
+++ b/shiohara-developer-guide.adoc
@@ -5,6 +5,7 @@ Viglet Team <opensource@viglet.com>
 :doctype: book
 :revnumber: 0.3.6 
 :revdate: 25-11-2019
+:numbered:
 
 [preface]
 = Prefácio
@@ -12,6 +13,7 @@ Viglet Team <opensource@viglet.com>
 The basis for this documentation germinated when I awoke one morning and was confronted by the dark and stormy eyes of the chinchilla.
 She had conquered the mountain of government reports that, over the course of six months, had eroded into several minor foothills and a creeping alluvial plain of loose papers.
 
+:numbered!:
 == Sobre o Autor
 
 Você pode contactar Alexandre Oliveira em alexandre.oliveira@viglet.com.
@@ -23,19 +25,17 @@ Alexandre Oliveira adora desenvolvimento de aplicações corporativas.
 
 Este livro é dedicado ao Enrico Shiohara, que ensinou tudo que sei sobre CMS.
 
-= Capítulo 1. Introdução
-[partintro]
---
+:numbered:
+== Introdução
 Neste capítulo provém conceitos e outras informações requeridas para realizar tarefas de desenvolvimento do Shiohara CMS
 
 Incluem os seguintes tópicos:
 
-* <<1.1. Sobre o Shiohara CMS>>
-* <<1.2. O que será coberto neste livro>>
-* <<1.3. Documentações necessárias>>
---
+* <<Sobre o Shiohara CMS>>
+* <<O que será coberto neste livro>>
+* <<Documentações necessárias>>
 
-== 1.1. Sobre o Shiohara CMS
+=== Sobre o Shiohara CMS
 
 O Viglet Shiohara CMS permite administradores e contribuidores usarem uma interface gráfica para definir como o conteúdo é apresentado nos web sites. A área de **Temas** é onde são gerenciados os objetos de apresentação. O **View Page** mostra a página completamente renderizada.
 
@@ -46,7 +46,7 @@ Existem 2 tipos de visualização do site: **Management** e **Publicado**, onde:
 
 O Shiohara CMS tem Page Layouts e Regions de exemplo, que podem ser vistos quando é criado o site, e pode servir de ponto de partida para criar seu site. Além disto possui formas de desenvolver e personalizar de forma programática estes templates, em que iremos discutir neste documento.
 
-== 1.1.1 Page Layouts e Regions
+==== Page Layouts e Regions
 
 Um Page Layout é um bloco básico de construção para criar e gerenciar paginas usando padões repetidos. Cada página gerada é associada com exatamente um Page Layout, que controla o layout, tema e regiões na página.
 
@@ -62,7 +62,7 @@ Uma região é uma área da página onde o conteúdo é renderizado. Os modelos 
 .Mostra um template com quatro regiões.
 image::assets/page-layout-4-regions.png[width="50%" height="50%"]
 
-== 1.1.2 API para Componentes
+==== API para Componentes
 
 Em Page Layots e Regiões podem ter API para Componentes, que são responsávels poder renderizar tipos diferentes de fontes de conteúdos do repositório do Shiohara CMS. Por exemplo, um **Query Component** pode ser usado para filtar uma lista de conteúdos de uma pasta, enquanto um **Navigation Component** pode renderizar as pastas como menus em seu site.
 
@@ -72,14 +72,15 @@ image::assets/page-layout-components.png[width="50%" height="50%"]
 
 A estrutura hierárquica deste template e suas regioes com API de Componentes é da seguinte forma:
 
-**Page Layout**
+.Page Layout
+Região de Cabeçalho:: Navigation Component
+Região de Navegação:: Navigation Component
+Região de Conteúdo:: Query Component
+Região do Rodapé:: Navigation Component
 
-. Região de Cabeçalho: Navigation Component
-. Região de Navegação: Navigation Component
-. Região de Conteúdo: Query Component
-. Região do Rodapé: Navigation Component
+NOTE: The header is optional.
 
-== 1.2. O que será coberto neste livro
+=== O que será coberto neste livro
 
 Na tabela abaixo, resume os tópico que serão cobertos neste documento e como eles são aplicados no desenvolvimento do Shiohara CMS.
 .Tópicos neste Livro
@@ -131,32 +132,28 @@ Na tabela abaixo, resume os tópico que serão cobertos neste documento e como e
 | "Construindo e Deployando Aplicações/Extensões" página 131
 |===
 
-== 1.3. Documentações necessárias
-
+=== Documentações necessárias
 Para outras documentações sobre o Shiohara CMS, incluindo Javadoc, Javascript API, vá em Getting Started (https://shiohara.readme.io/docs).
 
-= Capítulo 2. Arquitetura de Implementação
-[partintro]
---
+== Arquitetura de Implementação
 Neste capítulo descreve e ilustra aplicações, componentes e arquivos que são implementados com o Shiohara CMS incluindo os seguintes tópicos:
 
-* <<2.1. Visão Geral>>
-* <<2.2. Diagrama de Implementação>>
-* <<2.3. Tabela de Deploy>>
-* <<2.4. Explicação do Diagrama e da Tabela>>
---
+* <<Visão Geral>>
+* <<Diagrama de Implementação>>
+* <<Tabela de Deploy>>
+* <<Explicação do Diagrama e da Tabela>>
 
-== 2.1. Visão Geral
+=== Visão Geral
 
 Para personalizar o Shiohara CMS, você deve implementar Java Archive (JAR) nas seguintes localizações:
 
-== 2.2. Diagrama de Implementação
+=== Diagrama de Implementação
 
 [#deployment-diagram]
 .Mostra a implementação de arquitetura do Shiohara CMS em detalhes e subsequente sessões discutidas nesta arquitetura.
 image::assets/deployment-diagram.png[width="50%" height="50%"]
 
-== 2.3. Tabela de Deploy
+=== Tabela de Deploy
 |===
 |Diretório |Arquivo implementado |Quem provê
 
@@ -169,27 +166,22 @@ image::assets/deployment-diagram.png[width="50%" height="50%"]
 |Você
 |===
 
-== 2.4. Explicação do Diagrama e da Tabela
+=== Explicação do Diagrama e da Tabela
 
-=== 2.4.1. viglet.shiohara.jar
+==== viglet.shiohara.jar
 Este arquivo JAR é implementado quando você instala e configura o Shiohara CMS. 
 
-=== 2.4.2. viglet-shiohara.conf
-O arquivo viglet-shiohara.conf especifica configurações do Shiohara CMS, podendo especificar variáveis e ajustes da JVM. O Shiohara CMS é baseado no Spring Boot 2, portanto todas as configurações presentes esta solução são validas. Mais informações em: Customizing a Script When It Runs (https://docs.spring.io/spring-boot/docs/current/reference/html/deployment.html#deployment-script-customization-when-it-runs)
+==== viglet-shiohara.conf
+O arquivo viglet-shiohara.conf especifica configurações do Shiohara CMS, podendo especificar variáveis e ajustes da JVM. O Shiohara CMS é baseado no Spring Boot 2, portanto todas as configurações presentes esta solução são validas. Mais informações em: https://docs.spring.io/spring-boot/docs/current/reference/html/deployment.html#deployment-script-customization-when-it-runs[Customizing a Script When It Runs, window="_blank"]
 
 
-= Capítulo 3. Criando Page Layouts
-[partintro]
---
+== Criando Page Layouts
 Neste capítulo descreve os tipos de Page Layout e explica com um template é construído. Incluem os seguintes tópicos:
 
-* <<3.1. Javascript>>
-* <<3.2. Desenvolvendo Regiões>>
-* <<2.3. Tabela de Deploy>>
-* <<2.4. Explicação do Diagrama e da Tabela>>
---
+* <<Javascript>>
+* <<Desenvolvendo Regiões>>
 
-== 3.1. Javascript
+=== Javascript
 O Javascript é permitido ser utilizada em Page Layout e Region. Provendo as seguintes funcionalidades.
 
 * **Suporta bibliotecas Javascript** - Usato para incluir qualquer arquivo de Javascript personalizado  para usar no código Javascript.
@@ -198,16 +190,16 @@ O Javascript é permitido ser utilizada em Page Layout e Region. Provendo as seg
 
 As views de Javascripts precisam ser escritas em Javascript usando a bibliotecas Javascript do Viglet Shiohara, pode ser utilizado especificando o **shObject** em seu código. Mais informaçõesm no Javascript API (https://shioharacms.github.io/shiohara/javascript/) 
 
-== 3.2. Desenvolvendo Regiões
+=== Desenvolvendo Regiões
 Shiohara CMS prove um número pré-configurado de componentes( como Navigation Component, Query Component) que simplifica a construção de uma página web.
 Cada região pode chamar um ou mais componentes.
 
 O resultado final da região é cacheada, ao menos que time-to-live (TTL) esteja configurado para zero (0).
 
-=== 3.2.1 Para que um Região é usada
+==== Para que uma Região é utilizada
 Regiões são essencialmente um fragmento de renderização. O desenvolvedor web associa a região ao um Page Layout ou outra Região para criar o resultado final pretendido.
 
-=== 3.2.3 Utilizando URL de Imagens e Conteúdos
+==== Utilizando URL de Imagens e Conteúdos
 Quando está escrevendo uma região, se o componente contem um atributo com link ou media, as informações armazenadas são apenas IDs que precisam ser convertidos para URLs.
 Pode ser utilizado usando os seguintes métodos do shObject:
 
@@ -217,7 +209,7 @@ Pode ser utilizado usando os seguintes métodos do shObject:
 
 
 [glossary]
-= Glossário
+== Glossário
 
 [glossary]
 book:: livro, documento
