--- a/getting-started.adoc
+++ b/getting-started.adoc
@@ -7,8 +7,8 @@
 :numbered:
 
 [[getting-started-installing-shiohara-cms]]
-== Installing Shiohara CMS
-Shiohara CMS can be used with "`classic`" Java development tools or installed as a command line tool.
+== Installing Shio CMS
+Shio CMS can be used with "`classic`" Java development tools or installed as a command line tool.
 Either way, you need https://www.java.com[Java SDK v1.8] or higher.
 Before you begin, you should check your current Java installation by using the following command:
 
